--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,37 @@
 version: '3.8'
 
 services:
-  25RP18841-web:
+  25rp18841-web:
     build: .
     ports:
       - "8080:80"
     depends_on:
-      - 25RP18841-db
+      - 25rp18841-db
     volumes:
       - ./src:/var/www/html
 
-  25RP18841-db:
+  25rp18841-db:
     image: mysql:8.0
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: 25RP18841_shareride_db
+      MYSQL_DATABASE: 25rp18841_shareride_db
       MYSQL_USER: user
       MYSQL_PASSWORD: userpassword
     ports:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
+      - ./database.sql:/docker-entrypoint-initdb.d/database.sql
 
-  25RP18841-phpmyadmin:
+  25rp18841-phpmyadmin:
     image: phpmyadmin/phpmyadmin
     environment:
-      PMA_HOST: 25RP18841-db
+      PMA_HOST: 25rp18841-db
       MYSQL_ROOT_PASSWORD: rootpassword
     ports:
       - "8081:80"
     depends_on:
-      - 25RP18841-db
+      - 25rp18841-db
 
 volumes:
   db_data:
